# nc-gcode-interpreter

./: .gitignore  CHANGELOG.md  Cargo.toml  Development.md  README.md  TODO.md  pyproject.toml
.github/workflows/: build-and-release-rust.yml  build-and-release.yml
docs/: resumable-interpretation-design.md  sinumerik-execution-model.md
examples/: actual_position.csv  actual_position.mpf  arc.csv  arc.mpf  arrays.csv  axis_index_assignment.csv  axis_index_assignment.mpf  basic_math.csv  basic_math.mpf  case.csv  case.mpf  case_insensitive_variables.csv  case_insensitive_variables.mpf  custom_vars.csv  def_string.csv  def_string.mpf  defaults.csv  edge_cases.csv  edge_cases.mpf  for_loop.csv  function_calls.csv  goto.csv  goto.mpf  if_statement.csv  increment.csv  logic_operators.csv  logic_operators.mpf  loop.csv  multiple_m_codes.csv  precedence.csv  precedence.mpf  r_param.csv  repeat.csv  simple.csv  spline.csv  spline.mpf  tool.csv  trans.csv  trans2.csv  trans2.mpf  (+7 more)
examples/flattening/: flatten_demo.mpf  flatten_demo_flattened.csv  flatten_demo_raw.csv
ggroups/: generate_g_commands.py  generate_pest.py  ggroups.pest
python/example/: minimal.py  streaming.py
python/nc_gcode_interpreter/: __init__.py  _internal.pyi  cli.py  viz.py
python/tests/: test_arithmetic_functions.py  test_batch_variables.py  test_batches.py  test_diagnostics.py  test_expected_output.py  test_field_defects.py  test_flatten.py  test_g_vocabulary.py  test_jumps.py  test_real_comparisons.py  test_stage1.py  test_streaming.py  test_string_operations.py  test_structured_errors.py  test_unsupported.py
src/: errors.rs  flatten.rs  grammar.pest  interpret_rules.rs  interpreter.rs  lib.rs  line_driver.rs  main.rs  modal_groups.rs  output.rs  state.rs  structure_scan.rs  types.rs  vm.rs
tests/: cli.rs
