[package]
name = "nc-gcode-interpreter"
version = "0.0.0-dev"
edition = "2021"

[lib]
name = "nc_gcode_interpreter"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "nc-gcode-interpreter"
path = "src/main.rs"

[dependencies]
csv = "1.4.0"
pest = "2.8.6"
pest_derive = "2.8.6"
thiserror = "2.0.18"
clap = { version = "4.6", features = ["derive"] }
rayon = "1.10"

[dependencies.pyo3]
version = "0.28"
optional = true

# polars + pyo3-polars are pulled in ONLY under the `python` feature so the
# pure-Rust lib/CLI (default features, used by mill-sim + the CLI) stay
# polars-free. `default-features = false` keeps the polars footprint to just the
# dtypes the Table -> DataFrame conversion needs (Int64/Float64/String/List).
[dependencies.polars]
version = "0.54"
optional = true
default-features = false

[dependencies.pyo3-polars]
version = "0.27"
optional = true

[features]
default = []
python = ["pyo3", "polars", "pyo3-polars"]
