[package]
name = "nc-gcode-interpreter"
version = "0.0.0-dev"
edition = "2021"

[lib]
name = "nc_gcode_interpreter"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "nc-gcode-interpreter"
path = "src/main.rs"

[dependencies]
csv = "1.4.0"
pest = "2.8.6"
pest_derive = "2.8.6"
thiserror = "2.0.18"
clap = { version = "4.6", features = ["derive"] }
rayon = "1.10"

[dependencies.pyo3]
version = "0.29"
optional = true

# The Table -> Python handoff is a zero-copy Arrow C-stream: we build a
# RecordBatch with the minimal arrow-rs crates (arrow-array + arrow-schema, NOT
# the `arrow` facade which drags in the compute/IPC/CSV/JSON kernels) and let
# pyo3-arrow export it as a PyCapsule - replacing the whole polars query engine.
# The Python side still receives a polars DataFrame via `pl.DataFrame(<capsule>)`
# with no pyarrow dependency. All three are pulled in ONLY under the `python`
# feature, so the pure-Rust lib/CLI (used by mill-sim + the CLI) stay Arrow-free.
[dependencies.arrow-array]
version = "59"
optional = true
default-features = false

[dependencies.arrow-schema]
version = "59"
optional = true
default-features = false

[dependencies.pyo3-arrow]
version = "0.19"
optional = true
default-features = false

[features]
default = []
python = ["pyo3", "arrow-array", "arrow-schema", "pyo3-arrow"]
