[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "nc-gcode-interpreter"
version = "1.0.0-rc0"
description = "A interpreter for NC (Numerical Control) code"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/yourusername/nc-gcode-interpreter"
Repository = "https://github.com/yourusername/nc-gcode-interpreter.git"
Documentation = "https://nc-gcode-interpreter.readthedocs.io/"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"


